
Change Log
-----------

Version v1.1:

  - FEATURE REQUEST: Made $REQUEST_URI easily available through $page.

Version v1.0:

  - FEATURE REQUEST: Made regular expressions match the upper-case HTML tags of old.
  
  - FEATURE REQUEST: $DOCUMENT_ROOT variable is not present when server globals are disabled,
    so use $_SERVER[] instead.

Version v0.5:

  - Implemented the 'apply_decorator' function on the Page class, which allows decorators to
    be applied to pages on demand.  Currently implemented only from the decorators themselves,
    but it might be advantageous to allow this on pages even though I can't see a use for it
    just yet.

    This provides portal-like functionality, automatically embedding a page which works
    standalone, such that it will work as a fragment.

  - Abstracted decorator location and execution logic into two new classes: DecoratorSelector
    and Decorator respectively.

  - Changed many method and variable names, bringing them more inline with SiteMesh's tag names
    where appropriate and making naming scheme more PHP-like.


Version 0.1:

  - Initial release.

