@@ -21,24 +21,17 @@
     at the following address: trejkaz@xaoza.net
 */
 
-    // The real page just occurred because this is the footer.
-    $page_content = ob_get_clean();
-
-    // Create the page object.  This guy does all the parsing work.
-    $page = new Page($page_content);
-
-    // Get the decorator using the optional 'decorator' parameter specified in the URL.
-    if (@isset($HTTP_GET_VARS["decorator"]))
+    // Bypass decoration entirely, for the identity decorator.
+    if ($decorator != NULL)
     {
-        $decorator = $decorator_selector->get_decorator($HTTP_GET_VARS["decorator"]);
-    }
-    else
-    {
-        // Will use the default.
-        $decorator = $decorator_selector->get_decorator(NULL);
-    }
+        // The real page just occurred because this is the footer.
+        $page_content = ob_get_clean();
 
-    // Perform the decoration.
-    $decorator->decorate($page);
+        // Create the page object.  This guy does all the parsing work.
+        $page = new Page($page_content);
+
+        // Perform the decoration.
+        $decorator->decorate($page);
+    }
 
 ?>
